frame/support/test/tests/derive_no_bound_ui/default_empty_enum.stderr
error: cannot derive Default for an empty enum
 --> tests/derive_no_bound_ui/default_empty_enum.rs:2:6
  |
2 | enum Empty {}
  |      ^^^^^
