frame/support/test/tests/derive_no_bound_ui/default_empty_enum.rs
#[derive(frame_support::DefaultNoBound)]
enum Empty {}

fn main() {}
